🎨 Improve: use `font-display` to ensure text is user-visible while fonts are loading [#2]
https://developer.chrome.com/docs/lighthouse/performance/font-display

--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -2,12 +2,14 @@
 	font-family: 'Kiwi Maru';
 	src: url('../fonts/Kiwi_Maru/KiwiMaru-Medium.woff2') format('woff2'),
 		url('../fonts/Kiwi_Maru/KiwiMaru-Medium.ttf') format('truetype');
+	font-display: swap;
 }
 
 @font-face {
 	font-family: 'Source Code Pro';
 	src: url('../fonts/Source_Code_Pro/static/SCodePro-Regular.woff2') format('woff2'),
 		url('../fonts/Source_Code_Pro/static/SourceCodePro-Regular.ttf') format('truetype');
+	font-display: swap;
 }
 
 html {
